--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/maltehuebner/fff-strike-map",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "dateformat": "^3.0.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "leaflet": "^1.3",
